Fix subscribe form's spacings

--- a/components/Contact/ContactForm.scss
+++ b/components/Contact/ContactForm.scss
@@ -14,6 +14,10 @@
 
   input, textarea, .btn {
     margin: 16px 10px;
+
+    @include sm {
+      margin: 16px 0;
+    }
   }
 
   @include sm {
@@ -116,7 +120,7 @@ input, textarea {
 .Subscribe-checkbox-wrap {
   display: flex;
   align-items: center;
-  margin: 0 6px;
+  margin: 0 10px;
 
   &:hover {
     color: $grey;
@@ -127,10 +131,10 @@ input, textarea {
   }
 
   .Contact-checkbox-description {
-    padding-left: 5px;
+    padding-left: 12px;
     font-size: 14px;
     line-height: 18px;
-    color: #3D3D42;
+    color: $grey;
 
     @include sm {
       font-size: 14px;
@@ -138,7 +142,7 @@ input, textarea {
     }
 
     &:hover, &:hover > a  {
-      color: $grey;
+      color: $grey-light;
     }
   }
 
